<resources>
    <string name="app_name">KnowledgeBucket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="categories">Categories</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="question_key">question</string>
    <string name="answerA">Answer A </string>
    <string name="answerB">Answer B</string>
    <string name="answerC">Answer C</string>
    <string name="answerD">Answer D</string>
    <string name="idea_logo">idea logo</string>
    <string name="app_logo">app logo</string>
    <string name="incorrect">incorrect_answers</string>
    <string name="correct">correct_answer</string>
    <string name="result">results</string>
    <string name="facts_key">facts key</string>
    <string name="tag">facts tag</string>
    <string name="intent_extra">intent_extra</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="high_sore">High score : </string>
    <string name="genre">Genre: </string>
    <string name="genre_key">genre</string>
    <string name="score_key">score</string>
    <string name="high_sore_key">high_score </string>
    <string name="score">score : </string>
    <string name="category">category</string>
    <string name="new_high_score">New High Score</string>
    <string name="play_again">Play again</string>
    <string name="timer_key">timer key</string>
    <string name="btnKey">Button key</string>
    <string name="answer_key">answer key</string>
    <string name="index_key">index key</string>
    <string name="game_over">Game Over</string>
    <string name="attemps_key">attempes Over</string>
    <string name="app_unit_id"> ca-app-pub-3940256099942544/6300978111</string>
</resources>
